--- a/CSS/prattbootstrap.css
+++ b/CSS/prattbootstrap.css
@@ -2385,8 +2385,8 @@ input[type="button"].btn-block {
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: url('../../bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.eot');
+  src: url('../../bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../../bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../../bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../../bootstrap-3.3.5-dist/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
 .glyphicon {
@@ -3343,6 +3343,8 @@ input[type="button"].btn-block {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto;
+    color: #333333;
+  background-color: transparent;
   }
 }
 
@@ -4237,6 +4239,17 @@ textarea.input-group-sm > .input-group-btn > .btn {
   line-height: 20px;
 }
 
+.navbar-right {
+  margin: 7.5px -15px;
+}
+
+.navbar-right > li > a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 20px;
+}
+
+
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
     position: static;
@@ -4260,6 +4273,29 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
+.navbar-right .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+    pointer
+  }
+  .navbar-right .open .dropdown-menu > li > a,
+  .navbar-right .open .dropdown-menu .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .navbar-right .open .dropdown-menu > li > a {
+    line-height: 20px;
+  }
+  .navbar-right .open .dropdown-menu > li > a:hover,
+  .navbar-right .open .dropdown-menu > li > a:focus {
+    background-image: none;
+  }
+}
+
 @media (min-width: 768px) {
   .navbar-nav {
     float: left;
@@ -4274,12 +4310,22 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
+.navbar-right > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
 @media (min-width: 768px) {
   .navbar-left {
     float: left !important;
   }
   .navbar-right {
     float: right !important;
+    padding : 5px 15px 5px 25px;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
   }
 }
 
@@ -4354,6 +4400,10 @@ textarea.input-group-sm > .input-group-btn > .btn {
   left: auto;
 }
 
+.navbar-right li{
+  cursor: pointer;
+}
+
 .navbar-btn {
   margin-top: 8px;
   margin-bottom: 8px;
@@ -4395,11 +4445,23 @@ textarea.input-group-sm > .input-group-btn > .btn {
   color: #777777;
 }
 
+.navbar-default .navbar-right > li > a {
+  color: #777777;
+}
+
+
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #333333;
   background-color: transparent;
 }
+
+.navbar-default .navbar-right > li > a:hover,
+.navbar-default .navbar-right > li > a:focus {
+  color: #333333;
+  background-color: transparent;
+}
+
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
@@ -4408,12 +4470,28 @@ textarea.input-group-sm > .input-group-btn > .btn {
   background-color: #e7e7e7;
 }
 
+.navbar-default .navbar-right > .active > a,
+.navbar-default .navbar-right > .active > a:hover,
+.navbar-default .navbar-right > .active > a:focus {
+  color: #555555;
+  background-color: #e7e7e7;
+}
+
+
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
 .navbar-default .navbar-nav > .disabled > a:focus {
   color: #cccccc;
   background-color: transparent;
 }
+
+.navbar-default .navbar-right > .disabled > a,
+.navbar-default .navbar-right > .disabled > a:hover,
+.navbar-default .navbar-right > .disabled > a:focus {
+  color: #cccccc;
+  background-color: transparent;
+}
+
 
 .navbar-default .navbar-toggle {
   border-color: #dddddd;
@@ -4453,10 +4531,37 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-bottom-color: #555555;
 }
 
-.navbar-default .navbar-nav > .dropdown > a .caret {
+.navbar-default .navbar-right > .dropdown > a .caret {
   border-top-color: #777777;
   border-bottom-color: #777777;
 }
+
+
+.navbar-default .navbar-right > .dropdown > a:hover .caret,
+.navbar-default .navbar-right > .dropdown > a:focus .caret {
+  border-top-color: #333333;
+  border-bottom-color: #333333;
+}
+
+.navbar-default .navbar-right > .open > a,
+.navbar-default .navbar-right > .open > a:hover,
+.navbar-default .navbar-right > .open > a:focus {
+  color: #555555;
+  background-color: #e7e7e7;
+}
+
+.navbar-default .navbar-right > .open > a .caret,
+.navbar-default .navbar-right > .open > a:hover .caret,
+.navbar-default .navbar-right > .open > a:focus .caret {
+  border-top-color: #555555;
+  border-bottom-color: #555555;
+}
+
+.navbar-default .navbar-right > .dropdown > a .caret {
+  border-top-color: #777777;
+  border-bottom-color: #777777;
+}
+
 
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
@@ -6803,3 +6908,256 @@ td.visible-print {
     display: none !important;
   }
 }
+
+/*UPLOAD*/
+#drop-files {
+    width: 400px;
+    height: 125px;
+    background: rgba(0,0,0,0.1);
+    border-radius: 10px;
+    border: 4px dashed rgba(0,0,0,0.2);
+    padding: 75px 0 0 0;
+    text-align: center;
+    font-size: 2em;
+    float: left;
+    font-weight: bold;
+    margin: 0 20px 20px 0;
+}
+ 
+#dropped-files {
+    float: left;
+    position: relative;
+    width: 560px;
+    height: 125px;
+}
+ 
+#upload-button {
+    position: absolute;
+    top: 87px;
+    z-index: 9999;
+    width: 210px;
+    display: none;
+}
+ 
+#dropped-files .image {
+    height: 200px;
+    width: 300px;
+    border: 4px solid #fff;
+    position: absolute;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    background: #fff;
+    border-radius: 4px;
+    overflow: hidden;
+}
+ 
+#upload-button .ss-upload {
+    font-size: 0.7em;
+}
+ 
+#upload-button a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 0 0 1000px 62px rgba(255, 255, 255, 1), inset 0 -35px 40px -10px #0A9FCA;
+    font-size: 20px;
+    padding: 10px 20px;
+    background-color: #4bc1e3;
+    border-radius: 10px;
+}
+ 
+#upload-button span {
+    display: block;
+    width: 160px;
+    text-align: center;
+    margin: 20px 0 0 0;
+    background: white;
+    border-radius: 10px;
+    font-size: 1.1em;
+    padding: 4px 0;
+    position: relative;
+    left: -14px;
+}
+#upload-button a:hover {
+    box-shadow: 0 0 1000px 62px rgba(255, 255, 255, 1), inset 0 -5px 40px 0px #0A9FCA;  
+}
+ 
+#extra-files {
+    display: none;
+    float: left;
+    position: relative;
+}
+ 
+#extra-files .number {
+    background: rgba(0,0,0,0.6);
+    border-radius: 4px;
+    display: inline-block;
+    position: relative;
+    font-weight: bold;
+    color: #fff;
+    padding: 20px 30px;
+    margin: 60px 0 0 0;
+    cursor: pointer;
+    font-size: 30px;
+}
+ 
+#dropped-files #upload-button .delete {
+    padding: 7px 6px 4px 6px;
+    border-radius: 100px;
+    background: rgba(0,0,0,0.6);
+    box-shadow: none;
+    font-size: 1em;
+    margin-left: 8px;
+}
+ 
+#dropped-files #upload-button .delete:hover {
+    background: rgba(0,0,0,0.8);
+}
+ 
+ 
+#extra-files .number:after {
+    position: absolute;
+    content: " ";
+    top: 18px;
+    left: -40px;
+    display: block;
+    border: 20px solid;
+    border-color: transparent rgba(0, 0, 0, 0.6) transparent transparent;
+}
+ 
+#extra-files #file-list {
+    display: none;
+    background: white;
+    padding: 20px 0;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    width: 250px;
+    top: 100px;
+    border: 1px solid #dadada;
+    left: -10px;
+    left: -16px;
+    max-height: 220px;
+    top: 150px;
+    position: absolute;
+    color: #545454;
+}
+ 
+#file-list ul {
+    overflow: scroll;
+    padding: 0;
+    border-top: 1px solid #dadada;
+    max-height: 200px;
+    width: 250px;
+    list-style: none;
+    border-bottom: 1px solid #dadada !important;
+}
+ 
+ 
+#file-list ul li:last-of-type {
+    border-bottom: 0 !important;
+}
+ 
+#uploaded-holder {
+    width: 700px;
+    height: 250px;
+    display: none;
+    float: left;
+}
+ 
+#extra-files #file-list:after, #extra-files #file-list:before {
+    position: absolute;
+    content: " ";
+    top: -40px;
+    left: 40px;
+    display: block;
+    border: 20px solid;
+    border-color: transparent transparent #ffffff transparent;
+}
+ 
+#extra-files #file-list:before {
+    border-color: transparent transparent #dadada transparent;
+    top: -41px;
+}
+ 
+#extra-files #file-list li {
+    border-bottom: 1px solid #eee;
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 10px;
+}
+ 
+#loading {
+    display: none;
+    float: left;
+    width: 100%;
+    position: relative;
+}
+ 
+#loading-bar {
+    width: 404px;
+    height: 40px;
+    background: #fff;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    border-radius: 5px;
+    padding: 2px;
+}
+ 
+.loading-color {
+    width: 0%;
+    height: 100%;
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    -ms-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+    border-radius: inherit;
+    background-color: #4edbf1;
+}
+ 
+#loading-content {
+    position: absolute;
+    top: 15px;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-align: center;
+    width: 405px;
+}
+ 
+#file-name-holder {
+    width: 100%;
+    float: left;
+}
+ 
+#file-name-holder h1 {
+    text-align: center;
+    border-bottom: 1px solid #dadada;
+    padding: 20px 0;
+    font-size: 3em;
+    margin: 0;
+}
+ 
+#uploaded-files {
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    width: 407px;
+    top: 100px;
+    padding: 0;
+    border: 1px solid #dadada;
+    max-height: 320px;
+    overflow: scroll;
+    color: #545454;
+}
+ 
+#uploaded-files li {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+    font-size: 1.5em;
+    font-weight: bold;
+    line-height: 25px;
+    color: #545454;
+}
+ 
+#uploaded-files a {
+    color: #1bacbf;
+}
+/*UPLOAD*/
